# lok

./: .gitattributes  .gitignore  .pi-lsp.json  Cargo.toml  Makefile  README.md  autoresearch.jsonl  lok.toml
.claude/: settings.json
.claude/templates/: completion-summary.md  review-synthesis.md  workflow-state.yaml
.github/: copilot-instructions.md
.lok/: lok.toml
.lok/prompts/: design-draft-prompt.md  design-review-prompt.md  pre-pr-validation-prompt.md  spec-review-prompt.md  validate-review-output.md
.lok/workflows/: design-draft.toml  design-review.toml  pre-pr-validation.toml  spec-review.toml
.pi/: AGENTS.md  IMPLEMENTATION_SUMMARY.md
.pi/agents/: README.md  claude-designer.md  codex-pre-pr.md  gemini-architect.md  ops-reviewer.md  (+2 more)
architecture/: architecture.html  dependencies.html  github-activity.html  index.html  risks.html  security.html
docs/: DEPENDENCIES.md  PROJECT.md  ROADMAP.md
specs/: 2026-03-30-clo-181-per-step-model-override.md  2026-04-03-clo-183-heuristic-validators.md  2026-04-04-clo-202-typed-backend-errors.md  2026-04-04-clo-203-config-merge.md  2026-04-04-clo-204-minijinja-integration.md  2026-04-04-clo-205-edit-parser.md  2026-04-07-clo-209-minijinja-workflow-migration.md  2026-04-08-clo-210-apply-verify-pipeline.md  2026-04-11-clo-207-enrich-query-output.md  2026-04-11-clo-211-wire-apply-verify-pipeline.md  2026-05-18-clo-370-stepresult-usage-field.md
src/: cache.rs  conductor.rs  config.rs  consensus.rs  debate.rs  git_agent.rs  main.rs  spawn.rs  team.rs  utils.rs  workflow.rs
tests/: codex_fixtures.rs  codex_parse_output.rs  gemini_fixtures.rs  integration.rs
(+374 files in other folders)
