[package]
name = "lokomotiv"
version = "20260518.0.0"
edition = "2021"
rust-version = "1.80"
description = "Local orchestration layer for coordinating multiple LLM backends"
authors = ["ducks"]
license = "MIT"
repository = "https://github.com/ducks/lok"
homepage = "https://github.com/ducks/lok"
documentation = "https://docs.rs/lokomotiv"

readme = "README.md"
keywords = ["llm", "ai", "orchestration", "codex", "gemini"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".bundle/",
    ".gems/",
    ".npm-global/",
    "log/",
    "tmp/",
    "target/",
]

[[bin]]
name = "lok"
path = "src/main.rs"

[[bin]]
name = "lokomotiv"
path = "src/main.rs"

[features]
default = []
bedrock = ["aws-config", "aws-sdk-bedrockruntime"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
indicatif = "0.17"
colored = "2"
anyhow = "1"
thiserror = "2"
dirs = "5"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
secrecy = "0.10"
regex = "1"
which = "7"
aws-config = { version = "1", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
chrono = { version = "0.4.43", features = ["serde"] }
minijinja = "2"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
